styling to navbar

--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
 <!-- header section starts-->
 <header>
     <h1 class="heading">Zac & Randi</h1>
+    <h2 class="heading"></h2>
 
     <nav class="navbar">
         <ul>
@@ -35,7 +36,11 @@
 </header>
 
 <!-- header section ends-->
+
 <!-- jquery cdn link-->
+    <script> src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"</script>
+
+<!-- custom link-->
     <script src="js/script.js"></script>
 
 </body>
