--- a/questions.html
+++ b/questions.html
@@ -36,6 +36,10 @@
 
 <!-- header section ends-->
 
+<!-- jquery cdn link-->
+    <script> src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"</script>
+
+<!-- custom link-->
     <script src="js/script.js"></script>
 
 </body>
