--- a/travel.html
+++ b/travel.html
@@ -36,7 +36,13 @@
 
 <!-- header section ends-->
 
+<!-- jquery cdn link-->
+    <script> src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"</script>
+    <script> src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"</script>
+
+<!-- custom link-->
     <script src="js/script.js"></script>
+    
 
 </body>
 </html>
