--- a/story.html
+++ b/story.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zandi Wedding</title>
 
-    <!-- google fonts-->
+    <!-- font awesome link-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
     <!-- custom css link-->
     <link rel="stylesheet" href="css/style.css">
@@ -16,8 +17,9 @@
 
 <!-- header section starts-->
 <header>
-    <h1 class="heading">Zac & Randi</h1>
-
+    <h1 class="heading">ZAC & RANDI</h1>
+    <h2 class="date">OCTOBER 12, 2024 <div id="circle" class="fa-solid fa-circle"></div> BLOOMINGTON, IL</h2>
+    
     <nav class="navbar">
         <ul>
             <li><a href="home.html">Home</a></li>
