--- a/questions.html
+++ b/questions.html
@@ -38,6 +38,52 @@
 
 <!-- header section ends-->
 
+<section class="story">
+    <div class="content">
+        <h1>WHAT'S FOR DINNER?</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod. Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+        <p>
+            <br>
+            <br>
+        </p>
+        <h1>WHAT SHOULD I WEAR?</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod.</p>
+        <p>
+            <br>
+            <br>
+        </p>
+        <h1>ARE KIDS WELCOME?</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod.</p>
+        <p>
+            <br>
+            <br>
+        </p>
+        <h1>WHEN IS THE RSVP DEADLINE?</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod.</p>
+        <p>
+            <br>
+            <br>
+        </p>
+        <h1>WILL THE CEREMONY AND RECEPTION BE INDOORS OR OUTDOORS?</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod.</p>
+        <p>
+            <br>
+            <br>
+        </p>
+        <h1>WILL THERE BE AN OPEN OR CASH BAR?</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod.</p>
+        <p>
+            <br>
+            <br>
+        </p>
+        <h1>DO YOU HAVE A WEDDING REGISTRY?</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod.</p>
+        <p>
+            <br>
+            <br>
+        </p>
+
+
 <!-- jquery cdn link-->
     <script> src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"</script>
 
