--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 <!-- header section starts-->
 <header>
     <h1 class="heading">ZAC & RANDI</h1>       
-    <h2 class="date">MONTH DAY, YEAR <div id="circle" class="fa-solid fa-circle"></div> BLOOMINGTON, IL</h2>
+    <h2 class="date">MONTH DD, YEAR <div id="circle" class="fa-solid fa-circle"></div> BLOOMINGTON, IL</h2>
 
     <nav class="navbar">
         <ul>
@@ -36,6 +36,40 @@
     </nav>
 
 </header>
+
+<div class ="hero"></div>
+<main>
+    <section class="placetime">
+        <h1>MONTH, DD, YEAR | BLOOMINGTON, IL</h1>
+    </section>
+    <div class="btn_wrapper">
+        <!-- start button -->
+        <button class="button is-rounded" id="rsvp" onclick="window.location.href='registry.html'">
+            RSVP
+        </button>
+        
+    </div>
+    <section class="details1">
+        <div class="content1">
+            <h1>CEREMONY</h1>
+            <h3>SATURDAY, MONTH DD, YEAR</h3>
+            <h3>3:00 PM - 3:30 PM</h3>
+            <p>Name Of The Location</p>
+            <p>1234, Main St. Bloomington, IL, 61761</p>
+            <p>Attire: Semi Formal</p>
+        </div>
+    </section>
+    <section class="details2">
+        <div class="content2">
+            <h1>RECEPTION</h1>
+            <h3>SATURDAY, MONTH DD, YEAR</h3>
+         <h3>3:30 PM - 11:00 PM</h3>
+            <p>Name Of The Location</p>
+            <p>1234, Main St. Bloomington, IL, 61761</p>
+            <p>Attire: Semi Formal</p>
+    </div>
+    </section>
+</main>
 
 <!-- header section ends-->
 
