Travel page done

--- a/travel.html
+++ b/travel.html
@@ -35,6 +35,34 @@
         </ul>
     </nav>
 </header>
+<section class="travel">
+    <div class="content">
+        <h1>NAME OF HOTEL</h1>
+        <h3>1234 CENTRAL ST, BLOOMINGTON, IL 61761 (555) 555 - 5555
+        </h3>
+        <p>Check-In: Saturday, Month, DD, YYYY | Check-Out: Sunday, Month, DD, YYYY</p>
+        <br>
+        <br>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui sit facilis voluptatum eum, eligendi eos architecto cupiditate est velit numquam impedit quas placeat veritatis rem. Sint quia sunt consequuntur unde.</p>
+    </div>
+</section>
+<div class="btn_wrapper">
+
+    <button class="button is-rounded" id="website" onclick="window.open('https://hotels.com','_blank')">
+        WEBSITE
+    </button>
+    
+</div>
+<!-- <section class="details2">
+    <div class="content2">
+        <h1>RECEPTION</h1>
+        <h3>SATURDAY, MONTH DD, YEAR</h3>
+     <h3>3:30 PM - 11:00 PM</h3>
+        <p>Name Of The Location</p>
+        <p>1234, Main St. Bloomington, IL, 61761</p>
+        <p>Attire: Semi Formal</p>
+</div>
+</section> -->
 
 <!-- header section ends-->
 
