shuttle page done

--- a/shuttle.html
+++ b/shuttle.html
@@ -36,6 +36,16 @@
     </nav>
 </header>
 
+<section class="shuttle">
+    <div class="content">
+        <h1>SHUTTLE OPTIONS</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at maxime expedita ut nihil fugit, doloremque nulla in vel blanditiis temporibus magni dolor nobis quia itaque vitae molestias, dolore quod.</p>
+    </div>
+
+
+
+</section>
+
 <!-- header section ends-->
 
 <!-- jquery cdn link-->
