--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
     </section>
     <div class="btn_wrapper">
         <!-- start button -->
-        <button class="button is-rounded" id="rsvp" onclick="window.location.href='registry.html'">
+        <button class="button is-rounded" id="rsvp" onclick="window.location.href='rsvp.html'">
             RSVP
         </button>
         
@@ -55,7 +55,7 @@
             <h3>SATURDAY, MONTH DD, YEAR</h3>
             <h3>3:00 PM - 3:30 PM</h3>
             <p>Name Of The Location</p>
-            <p>1234, Main St. Bloomington, IL, 61761</p>
+            <p>1234 Main St. Bloomington, IL, 61761</p>
             <p>Attire: Semi Formal</p>
         </div>
     </section>
