--- a/todo.html
+++ b/todo.html
@@ -35,6 +35,22 @@
         </ul>
     </nav>
 </header>
+<section class="todo">
+    <div class="content">
+        <h1>PLACE</h1>
+        <h3>1234 Main St. Bloomington, IL 61761 </h3>
+        <h3>(555)555-5555</h3>
+        <br>
+        <p>This is one of our favorite places in town!</p>
+    </div>
+</section>
+<div class="btn_wrapper">
+
+    <button class="button is-rounded" id="todobtn" onclick="window.open('https://google.com','_blank')">
+        WEBSITE
+    </button>
+    
+</div>
 
 <!-- header section ends-->
 
