--- a/home.html
+++ b/home.html
@@ -34,7 +34,10 @@
             <li><a href="rsvp.html">RSVP</a></li>
         </ul>
     </nav>
-
+<section id="count-body">
+    <h1>Countdown:</h1>
+    <p id="counter">Loading...</p>
+</section>
 </header>
 
 <div class ="hero"></div>
@@ -82,7 +85,7 @@
     <script> src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"</script>
 
 <!-- custom link-->
-    <script src="js/script.js"></script>
+    <script src="css/js/script.js"></script>
 
 </body>
 </html>
