--- a/party.html
+++ b/party.html
@@ -35,6 +35,19 @@
         </ul>
     </nav>
 </header>
+<section class="party">
+    <div class="content">
+        <p>Jane Doe - Maid of Honor</p>
+        <br>
+        <br>
+        <p>Sally Smith - Bridesmaid</p>
+        <br>
+        <br>
+        <p>Suzy Johnson - Bridesmaid</p>
+
+    </div>
+
+</section>
 
 <!-- header section ends-->
 
