--- a/travel.html
+++ b/travel.html
@@ -37,7 +37,7 @@
 </header>
 <section class="travel">
     <div class="content">
-        <h1>NAME OF HOTEL</h1>
+        <h1>HOTEL INN & SUITES</h1>
         <h2>1234 CENTRAL ST, BLOOMINGTON, IL 61761</h2>
         <h3>(555)555-5555</h3>
         <p>Check-In: Saturday, Month, DD, YYYY | Check-Out: Sunday, Month, DD, YYYY</p>
