bloomington added as only search option

--- a/public/pages/travel.html
+++ b/public/pages/travel.html
@@ -54,16 +54,14 @@
     
 </div>
 <div id = "formContainer" class ="formContainer">
-        <aside>
             <h2>Check Weather in Bloomington, IL</h2>
-            <form>
-                <input id="userInput" type="text" placeholder="Bloomington" />
+            <div>
+                <!-- <input id="userInput" type="text" placeholder="Bloomington" /> -->
                 <button id="searchBtn" class="btn btn-secondary my-2 my-sm-0" type="submit">Check Weather</button>
            
-            </form>
+            </div>
             <hr>
             <div id = "searchHistoryContainer"></div>
-        </aside>
     </div>
 
     <div id = "todayCard" class="todayCard" style="width: 63rem;">
@@ -127,9 +125,9 @@
 <!-- header section ends-->
 
 <!-- jquery cdn link-->
-    <!-- <script> src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"</script>
+    <script> src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"</script>
     <script> src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"</script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
