no errors when searching name, but doesn't bring up any name

--- a/public/pages/rsvp.html
+++ b/public/pages/rsvp.html
@@ -38,7 +38,7 @@
 
 <h2>Please RSVP!</h2>
             <form action="/search">
-                <input type="search" name="name" placeholder="Full Name"/>
+                <input type="search" name="first_name" placeholder="Full Name"/>
                 <button id="searchBtn" class="btn btn-secondary my-2 my-sm-0" type="submit">Find Your Invitation</button>
            
             </form>
@@ -49,7 +49,7 @@
     <script> src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"</script>
 
 <!-- custom link-->
-    <script src="/assets/js/script.js"></script>
+    <!-- <script src="/assets/js/script.js"></script> -->
 
 </body>
 </html>
