--- a/public/pages/rsvp.html
+++ b/public/pages/rsvp.html
@@ -37,6 +37,11 @@
 </header>
 
 <h2>Please RSVP!</h2>
+    <label>Name:</label>
+        <input type="text" id="name-input">
+        <button id="add-name-btn">Add Name</button>
+
+        <br><br><br>
             <div>
                 <input id="search-input" name="full_name" placeholder="Full Name"/>
                 <button id="search-btn" class="btn btn-secondary my-2 my-sm-0" type="submit">Find Your Invitation</button>
