formatted hero, bridal party, added footer

--- a/public/index.html
+++ b/public/index.html
@@ -35,25 +35,26 @@
         </ul>
     </nav>
 <section id="count-body">
-    <h1>Countdown:</h1>
+    <h1>Days Until Wedding:</h1>
     <p id="counter">Loading...</p>
 </section>
 </header>
 
-<div class ="hero"></div>
+<section class="hero">
+</section>
 <main>
     <section class="placetime">
         <h1>MONTH, DD, YEAR | BLOOMINGTON, IL</h1>
     </section>
     <div class="btn_wrapper">
         <!-- start button -->
-        <button class="button is-rounded" id="rsvp" onclick="window.location.href='rsvp.html'">
+        <button class="button is-rounded" id="rsvp" onclick="window.location.href='rsvp'">
             RSVP
         </button>
         
     </div>
-    <section class="details1">
-        <div class="content1">
+    <section class="details">
+        <div class="content">
             <h1>CEREMONY</h1>
             <h3>SATURDAY, MONTH DD, YEAR</h3>
             <h3>3:00 PM - 3:30 PM</h3>
@@ -61,12 +62,10 @@
             <p>1234 Main St. Bloomington, IL, 61761</p>
             <p>Attire: Semi Formal</p>
         </div>
-    </section>
-    <section class="details2">
-        <div class="content2">
+        <div class="content">
             <h1>RECEPTION</h1>
             <h3>SATURDAY, MONTH DD, YEAR</h3>
-         <h3>3:30 PM - 11:00 PM</h3>
+            <h3>3:30 PM - 11:00 PM</h3>
             <p>Name Of The Location</p>
             <p>1234, Main St. Bloomington, IL, 61761</p>
             <p>Attire: Semi Formal</p>
@@ -86,6 +85,11 @@
 
 <!-- custom link-->
     <script src="/assets/js/count.js"></script>
+
+<footer>
+    <h1>Z&R</h1>
+    <p>MM.DD.YYYY</p>
+</footer>
 
 </body>
 </html>
