--- a/public/pages/rsvp.html
+++ b/public/pages/rsvp.html
@@ -37,11 +37,6 @@
 </header>
 
 <h2>Please RSVP!</h2>
-    <label>Name:</label>
-        <input type="text" id="name-input">
-        <button id="add-name-btn">Add Name</button>
-
-        <br><br><br>
             <div>
                 <input id="search-input" name="full_name" placeholder="Full Name"/>
                 <button id="search-btn" class="btn btn-secondary my-2 my-sm-0" type="submit">Find Your Invitation</button>
@@ -62,7 +57,7 @@
                 <input type="text" id="update-name-input">
                 <input type="radio" id="true" name="attending" value="Yes" onclick="myFunction(this.value)">Yes
                 <input type="radio" id="false" name="attending" value="No" onclick="myFunction(this.value)">No
-                <button id="update-row-btn">Update</button>
+                <button id="update-row-btn">Submit</button>
                 
             </section>
 
@@ -77,6 +72,11 @@
 
 <!-- custom link-->
     <script src="/assets/js/rsvp.js"></script>
+
+<footer>
+    <h1>Z&R</h1>
+    <p>MM.DD.YYYY</p>
+</footer>
 
 </body>
 </html>
