--- a/public/pages/story.html
+++ b/public/pages/story.html
@@ -59,17 +59,12 @@
 
 </section>
 
-
-
-
-
-<!-- story section starts -->
-
 <!-- jquery cdn link-->
     <script> src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"</script>
-
-<!-- custom link-->
-    <script src="/assets/js/count.js"></script>
+<footer>
+    <h1>Z&R</h1>
+    <p>MM.DD.YYYY</p>
+</footer>
 
 </body>
 </html>
