--- a/public/pages/party.html
+++ b/public/pages/party.html
@@ -35,19 +35,24 @@
         </ul>
     </nav>
 </header>
-<section class="party">
+<div class="party">
     <div class="content">
-        <p>Jane Doe - Maid of Honor</p>
-        <br>
-        <br>
-        <p>Sally Smith - Bridesmaid</p>
-        <br>
-        <br>
-        <p>Suzy Johnson - Bridesmaid</p>
+        <ul>
+            <li>Jane Doe - Maid of Honor</li>
+            <li>Sally Smith - Bridesmaid</li>
+            <li>Sara Johnson - Bridesmaid</li>
+            <li>Jessica Atal - Bridesmaid</li>
+            <li>Macy Newman - Bridesmaid</li>
+            <li>Zac Thomas - Best Man</li>
+            <li>Roger Downs - Groomsman</li>
+            <li>Alex Peters - Groomsman</li>
+            <li>Daniel Crowe - Groomsman</li>
+            <li>Michael Commor - Groomsman</li>
+        </ul>
 
     </div>
 
-</section>
+</div>
 
 <!-- header section ends-->
 
@@ -56,6 +61,12 @@
 
 <!-- custom link-->
     <script src="/assets/js/count.js"></script>
+
+
+<footer>
+    <h1>Z&R</h1>
+    <p>MM.DD.YYYY</p>
+</footer>
 
 </body>
 </html>
