--- a/public/pages/photos.html
+++ b/public/pages/photos.html
@@ -44,5 +44,10 @@
 <!-- custom link-->
     <script src="/assets/js/count.js"></script>
 
+    <footer>
+        <h1>Z&R</h1>
+        <p>MM.DD.YYYY</p>
+    </footer>
+
 </body>
 </html>
