--- a/public/pages/registry.html
+++ b/public/pages/registry.html
@@ -42,73 +42,33 @@
 <body>
     <!-- Bootstrap provides ready to use classes to style elements -->
     <main class="container">
+      <div class="gifts">
+        <h1>
+          Gift Providers
+        </h1>
+      </div>
         <!-- Bootstrap spacing utilities use m- for margin and p- for padding --> 
         <section class="row my-4">
           <div class="col-12 col-md-9">
             <!-- Use justify-content utilities to change alignment of flex items on the main axis -->
-            <section class="row justify-content-evenly">
-    
               <div class="col-12 col-sm-6 col-lg-4 mb-3">
                 <div class="card">
-                    <img src="https://via.placeholder.com/400" alt="The placeholder image helps demonstrate this card component"
+                  <img src="https://via.placeholder.com/400" alt="The placeholder image helps demonstrate this card component"
                   class="card-img">
-                  <h3 class="card-header bg-info">
-                    Service 1
-                  </h3>
-                  <div class="card-body">
-                    <p class="card-text">
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo accusantium dolor at, blanditiis rem
-                      quisquam ipsam ipsum. Magnam ut quibusdam facilis consequatur veritatis, ullam molestiae, inventore
-                      neque,
-                      quas obcaecati laborum?
-                    </p>
-                    <button class="btn btn-block btn-info">Learn more.</button>
+                    <button class="btn btn-block btn-info">Shop Registry</button>
                   </div>
                 </div>
               </div>
+          <div class="col-12 col-md-9">
               <div class="col-12 col-sm-6 col-lg-4 mb-3">
                 <div class="card">
-                  <h3 class="card-header bg-success">
-                    Service 2
-                  </h3>
-                  <div class="card-body">
-                    <p class="card-text">
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo accusantium dolor at, blanditiis rem
-                      quisquam ipsam ipsum. Magnam ut quibusdam facilis consequatur veritatis, ullam molestiae, inventore
-                      neque,
-                      quas obcaecati laborum?
-                    </p>
-                    <button class="btn btn-block btn-info">Learn more.</button>
-                  </div>
-                </div>
-              </div>
-              <div class="col-12 col-sm-6 col-lg-4 mb-3">
-                <div class="card">
-                  <h3 class="card-header bg-warning">
-                    Service 3
-                  </h3>
-                  <div class="card-body">
-                    <p class="card-text">
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo accusantium dolor at, blanditiis rem
-                      quisquam ipsam ipsum. Magnam ut quibusdam facilis consequatur veritatis, ullam molestiae, inventore
-                      neque,
-                      quas obcaecati laborum?
-                    </p>
-                    <button class="btn btn-block btn-info">Learn more.</button>
+                  <img src="https://via.placeholder.com/400" alt="The placeholder image helps demonstrate this card component"
+                  class="card-img">
+                    <button class="btn btn-block btn-info">Shop Registry</button>
                   </div>
                 </div>
               </div>
             </section>
-          </div>
-          <div class="col-12 col-md-3">
-            <h2>About Us</h2>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. A deleniti illo amet veniam. Enim dignissimos sint,
-              modi voluptate libero corporis ipsa consectetur commodi dolorum dolores vitae? Odit perspiciatis iure placeat.
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam, neque ab doloremque, harum corporis
-              voluptas explicabo amet culpa, odit autem totam itaque voluptatibus ipsa quos aperiam eius vel? Commodi,
-              nesciunt.
-            </p>
           </div>
         </section>
     
@@ -145,19 +105,19 @@
           </div>
         </section>
       </main>
-  
-  
-  </body>
-
-
         <!-- header section ends-->
         <!-- jquery cdn link-->
-<script> src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"</script>
+    <script> src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"</script>
 
 <!-- custom link-->
-<script src="/assets/js/count.js"></script>
+    <script src="/assets/js/count.js"></script>
 
 <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <footer>
+    <h1>Z&R</h1>
+    <p>MM.DD.YYYY</p>
+</footer>
+  
+  </body>
 </html>
