--- a/public/pages/todo.html
+++ b/public/pages/todo.html
@@ -58,6 +58,10 @@
     <script> src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"</script>
 
 <!-- custom link-->
-
+<footer>
+    <h1>Z&R</h1>
+    <p>MM.DD.YYYY</p>
+    
+</footer>
 </body>
 </html>
