--- a/public/pages/travel.html
+++ b/public/pages/travel.html
@@ -135,6 +135,10 @@
 <!-- custom link-->
     <script src="/assets/js/weather.js"></script>
     
+<footer>
+    <h1>Z&R</h1>
+    <p>MM.DD.YYYY</p>
+</footer>
 
 </body>
 </html>
