registry page done

--- a/public/index.html
+++ b/public/index.html
@@ -50,8 +50,7 @@
         <!-- start button -->
         <button class="button is-rounded" id="rsvp" onclick="window.location.href='rsvp'">
             RSVP
-        </button>
-        
+        </button>        
     </div>
     <section class="details">
         <div class="content">
@@ -87,6 +86,7 @@
     <script src="/assets/js/count.js"></script>
 
 <footer>
+    <div id="line"><hr /></div>
     <h1>Z&R</h1>
     <p>MM.DD.YYYY</p>
 </footer>
