--- a/public/pages/rsvp.html
+++ b/public/pages/rsvp.html
@@ -73,10 +73,11 @@
 <!-- custom link-->
     <script src="/assets/js/rsvp.js"></script>
 
-<footer>
+<!-- <footer>
+    <div id="line"><hr /></div>
     <h1>Z&R</h1>
     <p>MM.DD.YYYY</p>
-</footer>
+</footer> -->
 
 </body>
 </html>
