--- a/public/pages/story.html
+++ b/public/pages/story.html
@@ -62,6 +62,7 @@
 <!-- jquery cdn link-->
     <script> src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"</script>
 <footer>
+    <div id="line"><hr /></div>
     <h1>Z&R</h1>
     <p>MM.DD.YYYY</p>
 </footer>
