--- a/public/pages/travel.html
+++ b/public/pages/travel.html
@@ -136,6 +136,7 @@
     <script src="/assets/js/weather.js"></script>
     
 <footer>
+    <div id="line"><hr /></div>
     <h1>Z&R</h1>
     <p>MM.DD.YYYY</p>
 </footer>
