--- a/public/pages/photos.html
+++ b/public/pages/photos.html
@@ -45,6 +45,7 @@
     <script src="/assets/js/count.js"></script>
 
     <footer>
+        <div id="line"><hr /></div>
         <h1>Z&R</h1>
         <p>MM.DD.YYYY</p>
     </footer>
