--- a/public/pages/questions.html
+++ b/public/pages/questions.html
@@ -88,6 +88,7 @@
     <script> src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"</script>
 
 <footer>
+    <div id="line"><hr /></div>
     <h1>Z&R</h1>
     <p>MM.DD.YYYY</p>
 </footer>
