rsvp page formatted, enter button searches

--- a/public/pages/registry.html
+++ b/public/pages/registry.html
@@ -49,15 +49,15 @@
       </div>
     
         <hr />
-        
+
         <div class="card d-inline-block text-center" style="width: 20rem;">
-          <img class="card-img-top" src="../assets/images/amazon.png" alt="Card image cap">
+          <img class="card-img-top" src="../assets/images/amazon.png" alt="Amazon wedding registry logo">
           <div class="card-body">
             <a href="https://www.amazon.com/" target="_blank" class="btn btn-danger btn-lg ">Shop Registry</a>
           </div>
         </div>
         <div class="card d-inline-block text-center" style="width: 20rem;">
-          <img class="card-img-top" src="../assets/images/target.png" alt="Card image cap">
+          <img class="card-img-top" src="../assets/images/target.png" alt="Target logo">
           <div class="card-body">
             <a href="https://www.target.com/" target="_blank"  class="btn btn-danger btn-lg">Shop Registry</a>
           </div>
