--- a/public/pages/rsvp.html
+++ b/public/pages/rsvp.html
@@ -36,8 +36,10 @@
     </nav>
 </header>
 
-<h2>Please RSVP!</h2>
-            <div>
+<section class="rsvp">
+    <h1>Zac & Randi's Wedding</h1>
+    <h2>Please look up your name to respond.  </h2>
+            <div class="search">
                 <input id="search-input" name="full_name" placeholder="Full Name"/>
                 <button id="search-btn" class="btn btn-secondary my-2 my-sm-0" type="submit">Find Your Invitation</button>
             </div>
@@ -60,7 +62,7 @@
                 <button id="update-row-btn">Submit</button>
                 
             </section>
-
+</section>
 <!-- header section ends-->
     <script>
     function myFunction(attending) {
