--- a/public/pages/travel.html
+++ b/public/pages/travel.html
@@ -64,17 +64,17 @@
             <div id = "searchHistoryContainer"></div>
     </div>
 
-    <div id = "todayCard" class="todayCard" style="width: 63rem;">
+    <div id = "todayCard" class="todayCard" style="width: 40rem;">
         <p id = "time"></p>
         <div id="city" class="card-header">
-          City:   
+          <!-- City:    -->
         </div> 
         <ul class="list-group list-group-flush">
           <li id= "temp" class="list-group-item">Temp:</li>
           <li id="wind" class="list-group-item">Wind:</li>
           <li id="humidity" class="list-group-item">Humidity:</li>
-          <li id="uv" class="list-group-item">UV Index:</li>
         </ul>
+        <hr>
       </div>
     
     <div class="five-day">
@@ -120,7 +120,7 @@
               </ul> 
         </div>
     </div>
-</section> -->
+</section>
 
 <!-- header section ends-->
 
