text box hidden, page formatted

--- a/public/pages/rsvp.html
+++ b/public/pages/rsvp.html
@@ -55,8 +55,8 @@
     
             <section hidden id="update-row">
                 
-                <label>Will you be joining us?</label>
-                <input type="text" id="update-name-input">
+                <label style="font-size: 20px">Will you be joining us?</label>
+                <input type="hidden" id="update-name-input">
                 <input type="radio" id="true" name="attending" value="Yes" onclick="myFunction(this.value)">Yes
                 <input type="radio" id="false" name="attending" value="No" onclick="myFunction(this.value)">No
                 <button id="update-row-btn">Submit</button>
