--- a/public/pages/travel.html
+++ b/public/pages/travel.html
@@ -73,11 +73,11 @@
     <div class="today">
         <div class="todayCard">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item" style = "font-size: 25px;">Bloomington, IL</li>
-                <li style ="text-decoration: underline" id= "time" class="list-group-item"></li>
-                <li id= "temp" class="list-group-item">Temp:</li>
-                <li id="wind" class="list-group-item">Wind:</li>
-                <li id="humidity" class="list-group-item">Humidity:</li>
+                <li class="list-group-item" style = "font-size: 25px; color: white;">Bloomington, IL</li>
+                <li style ="text-decoration: underline; color: white" id= "time" class="list-group-item"></li>
+                <li style="color: white" id= "temp" class="list-group-item">Temp:</li>
+                <li style="color: white" id="wind" class="list-group-item">Wind:</li>
+                <li style="color: white" id="humidity" class="list-group-item">Humidity:</li>
             </ul>
         </div>
     </div>
