photo page done

--- a/public/pages/travel.html
+++ b/public/pages/travel.html
@@ -83,7 +83,7 @@
     </div>
     
     <div class="five-day">
-        <div class="card" width="width: 18rem">
+        <div class="cards" width="width: 18rem">
             <ul class="list-group list-group-flush">
                 <li style= "text-decoration: underline" id= "timeWeek-1" class="list-group-item"></li>
                 <li id= "temp-1" class="list-group-item">Temp:</li>
@@ -91,7 +91,7 @@
                 <li id="humidity-1" class="list-group-item">Humidity:</li>
               </ul> 
         </div>
-        <div class="card" width="width: 18rem,">
+        <div class="cards" width="width: 18rem,">
             <ul class="list-group list-group-flush">
                 <li style= "text-decoration: underline" id= "timeWeek-2" class="list-group-item"></li>
                 <li id= "temp-2" class="list-group-item">Temp:</li>
@@ -99,7 +99,7 @@
                 <li id="humidity-2" class="list-group-item">Humidity:</li>
               </ul> 
         </div>
-        <div class="card" width="width: 18rem">
+        <div class="cards" width="width: 18rem">
             <ul class="list-group list-group-flush">
                 <li style= "text-decoration: underline" id= "timeWeek-3" class="list-group-item"></li>
                 <li id= "temp-3" class="list-group-item">Temp:</li>
@@ -107,7 +107,7 @@
                 <li id="humidity-3" class="list-group-item">Humidity:</li>
               </ul> 
         </div>
-        <div class="card" width="width: 18rem">
+        <div class="cards" width="width: 18rem">
             <ul class="list-group list-group-flush">
                 <li style= "text-decoration: underline" id= "timeWeek-4" class="list-group-item"></li>
                 <li id= "temp-4" class="list-group-item">Temp:</li>
@@ -116,7 +116,7 @@
 
               </ul> 
         </div>
-        <div class="card" width="width: 18rem">
+        <div class="cards" width="width: 18rem">
             <ul class="list-group list-group-flush">
                 <li style = "text-decoration: underline" id= "timeWeek-5" class="list-group-item"></li>
                 <li id= "temp-5" class="list-group-item">Temp:</li>
