--- a/public/pages/photos.html
+++ b/public/pages/photos.html
@@ -9,6 +9,9 @@
     <!-- font awesome link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
+    <!-- bootstrap link-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <!-- custom css link-->
     <link rel="stylesheet" href="/assets/css/style.css">
 
@@ -36,13 +39,40 @@
     </nav>
 </header>
 
+<div class="card-deck">
+    <div class="card">
+      <img src="../assets/images/homephoto.png" class="card-img-top" alt="...">
+    </div>
+    <div class="card">
+      <img src="../assets/images/homephoto.png" class="card-img-top" alt="...">
+    </div>
+    <div class="card">
+      <img src="../assets/images/homephoto.png" class="card-img-top" alt="...">
+    </div>
+    <div class="card">
+      <img src="../assets/images/homephoto.png" class="card-img-top" alt="...">
+    </div>
+    <div class="card">
+      <img src="../assets/images/homephoto.png" class="card-img-top" alt="...">
+    </div>
+    <div class="card">
+      <img src="../assets/images/homephoto.png" class="card-img-top" alt="...">
+    </div>
+    <div class="card">
+      <img src="../assets/images/homephoto.png" class="card-img-top" alt="...">
+    </div>
+    <div class="card">
+      <img src="../assets/images/homephoto.png" class="card-img-top" alt="...">
+    </div>
+    <div class="card">
+      <img src="../assets/images/homephoto.png" class="card-img-top" alt="...">
+    </div>
+  </div>
+
 <!-- header section ends-->
 
 <!-- jquery cdn link-->
     <script> src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"</script>
-
-<!-- custom link-->
-    <script src="/assets/js/count.js"></script>
 
     <footer>
         <div id="line"><hr /></div>
