--- a/public/pages/photos.html
+++ b/public/pages/photos.html
@@ -23,18 +23,18 @@
     <h1 class="heading">ZAC & RANDI</h1>
     <h2 class="date">MONTH DAY, YEAR <div id="circle" class="fa-solid fa-circle"></div> BLOOMINGTON, IL</h2>
 
-    <nav class="navbar">
+    <nav style="display: flex; align-items: center; justify-content:center; list-style: none; padding: 1 rem; cursor: default; flex-wrap:wrap;" class="navbar">
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="story">Our Story</a></li>
-            <li><a href="photos">Photos</a></li>
-            <li><a href="party">Wedding Party</a></li>
-            <li><a href="questions">Q+A</a></li>
-            <li><a href="travel">Travel</a></li>
-            <li><a href="registry">Registry</a></li>
-            <li><a href="shuttle">Shuttle Service</a></li>
-            <li><a href="todo">Things to Do</a></li>
-            <li><a href="rsvp">RSVP</a></li>
+            <li><a style="text-decoration: none" href="/">Home</a></li>
+            <li><a style="text-decoration: none" href="story">Our Story</a></li>
+            <li><a style="text-decoration: none" href="photos">Photos</a></li>
+            <li><a style="text-decoration: none" href="party">Wedding Party</a></li>
+            <li><a style="text-decoration: none" href="questions">Q+A</a></li>
+            <li><a style="text-decoration: none" href="travel">Travel</a></li>
+            <li><a style="text-decoration: none" href="registry">Registry</a></li>
+            <li><a style="text-decoration: none" href="shuttle">Shuttle Service</a></li>
+            <li><a style="text-decoration: none" href="todo">Things to Do</a></li>
+            <li><a style="text-decoration: none" href="rsvp">RSVP</a></li>
         </ul>
     </nav>
 </header>
